--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,103 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/**
+ * @author Sotirios Karageorgopoulos
+ */
+:root {
+    /* dark shades of primary color*/
+    --clr-primary-1: hsl(208, 25%, 28%);
+    --clr-primary-2: hsl(208, 30%, 38%);
+    --clr-primary-3: hsl(208, 40%, 48%);
+    --clr-primary-4: hsl(208, 50%, 58%);
+    /* primary/main color */
+    --clr-primary-5: hsl(208, 86%, 65%);
+    /* lighter shades of primary color */
+    --clr-primary-6: hsl(208, 62%, 60%);
+    --clr-primary-7: hsl(208, 65%, 70%);
+    --clr-primary-8: hsl(208, 75%, 80%);
+    --clr-primary-9: hsl(208, 85%, 80%);
+    --clr-primary-10: hsl(208, 85%, 96%);
+    /* darkest grey for headings*/
+    --clr-grey-1: hsl(209, 61%, 16%);
+    --clr-grey-2: hsl(211, 39%, 23%);
+    --clr-grey-3: hsl(209, 34%, 30%);
+    --clr-grey-4: hsl(209, 28%, 39%);
+    /* grey used for paragraphs */
+    --clr-grey-5: hsl(210, 22%, 49%);
+    --clr-grey-6: hsl(209, 23%, 60%);
+    --clr-grey-7: hsl(211, 27%, 70%);
+    --clr-grey-8: hsl(210, 31%, 80%);
+    --clr-grey-9: hsl(212, 33%, 89%);
+    --clr-grey-10: hsl(210, 36%, 96%);
+    --clr-white: #fff;
+    --clr-gold: #c59d5f;
+    --clr-red-dark: hsl(360, 67%, 44%);
+    --clr-red-light: hsl(360, 71%, 66%);
+    --clr-green-dark: hsl(125, 67%, 44%);
+    --clr-green-light: hsl(125, 71%, 66%);
+    --clr-black: #222;
+    --transition: all 0.3s linear;
+    --spacing: 0.1rem;
+    --radius: 0.25rem;
+    --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    --small-font-size: 14px;
+    --medium-font-size: 18px;
+    --big-font-size: 30px;
+    --x-big-font-size: 40px;
+    --xx-big-font-size: 60px;
+    --rating-star: #FDCC0D;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+    font-family: Vujahday;
+    src: url('./static/VujahdayScript-Regular.ttf')
+}
+
+body {
+    background: linear-gradient(0.25turn, var(--clr-primary-3), var(--clr-primary-6), var(--clr-primary-9));
+}
+
+input[type=datetime-local]:required:invalid::-webkit-datetime-edit {
+    color: transparent;
+}
+
+input[type=datetime-local]:focus::-webkit-datetime-edit {
+    color: var(--clr-grey-6) !important;
+}
+
+.form-input {
+    width: 95%;
+    margin-bottom: 8%;
+}
+
+.form {
+    display: flex;
+    flex-flow: column nowrap;
+    background-color: var(--clr-primary-10);
+    width: 90%;
+    padding: 2%;
+    margin: 7% auto 0% auto; 
+}
+
+.modal-form {
+    margin-top: 30%;
+}
+
+.modal-form-heading {
+    color: var(--clr-primary-3);
+    font-family: Vujahday;
+    font-weight: 700;
+    text-align: center;
+}
+
+.x-circle {
+    color: var(--clr-red-dark);
+}
+
+.x-circle-box {
+    margin-left: auto;
+}
+
+.x-circle:hover {
+    opacity: 0.8;
+    cursor: pointer;
 }
