add comments in css files

--- a/src/features/customer/customer.css
+++ b/src/features/customer/customer.css
@@ -32,7 +32,7 @@
 }
 
 /**
- * @author Giorgos Koulos
+ * @author Dimitris Michailidis
  */
 @media only screen and (max-width:912px) {
     /*margin-top μεγαλυτερο μεταξύ φορμας και navbar*/
@@ -40,7 +40,7 @@
 }
 
 /**
- * @author Giorgos Koulos
+ * @author Dimitris Michailidis
  */
 @media only screen and (max-width:540px) {
      /*margin-top κανονικο μεταξύ φορμας και navbar*/
