--- a/src/features/register/register.css
+++ b/src/features/register/register.css
@@ -21,7 +21,7 @@
 }
 
 /**
- * @author Giorgos Koulos
+ * @author Venetia Tassou
  */
 @media only screen and (max-width:912px) {
     /*Μεγαλύτερο margin top μεταξύ form και navbar*/
@@ -29,14 +29,14 @@
 }
 
 /**
- * @author Giorgos Koulos
+ * @author Venetia Tassou
  */
 @media only screen and (max-width:540px) {
     /*Δεν θέλουμε margin bottom μεταξύ form και navbar: margin-bottom: unset;*/
 }
 
 /**
- * @author Giorgos Koulos
+ * @author Venetia Tassou
  */
 @media only screen and (max-width:414px) {
     /*Μικρότερη γραμματοσειρά*/
