--- a/src/features/customers/customers.css
+++ b/src/features/customers/customers.css
@@ -29,7 +29,7 @@
 }
 
 /**
- * @author Dimitris Giannopoulos
+ * @author Dimitris Michailidis
  */
 @media only screen and (max-width: 1024px) {
     /*να γινει το flex-flow του customer-btns column*/
