--- a/src/features/reservation_history/reservation_history.css
+++ b/src/features/reservation_history/reservation_history.css
@@ -37,4 +37,8 @@
  */
 @media only screen and (max-width: 1024px) {
  /*res-history-btns width: 60%*/
+ .res-history-btns {
+    width: 60%;
+ }
+
 }
